# aidashboard

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  HANDOFF.md  HETZNER_QUICKSTART.md  HETZNER_SETUP_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ITEMTOPICS.md  NEXT_PLAN.md  PHASE2_TESTING.md  PLAN.md  README_HETZNER_DEPLOYMENT.md  SETUP.md  docker-compose.prod.yml  rss.json
.claude/: settings.local.json
.github/: DEPLOY_SETUP.md
.github/workflows/: deploy.yml
infra/: docker-compose.yml
scripts/: deploy-hetzner.sh  setup-phase2.sh
server/ingestor/: .env.example  .gitignore  Cargo.toml  Dockerfile
server/ingestor/examples/: database_location.rs
server/ingestor/src/: config.rs  db.rs  main.rs  models.rs  topics.rs
server/ingestor/src/sources/: arxiv.rs  mod.rs  rss.rs
server/migrations/: 20260124000001_init_ai_dashboard.sql  20260124000002_electric_publication.sql  20260125000003_init_items.sql  20260125000004_seed_default_sources.sql  20260125000005_seed_rss_sources.sql  20260129000006_remove_foreign_key_constraints.sql  20260201000007_add_topics_array.sql
web/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx  app.html  vite-env.d.ts
web/src/components/: ErrorBoundary.tsx  Filters.tsx  ItemCard.tsx  Layout.tsx  Navigation.tsx  SearchBar.tsx  SourceModal.tsx
web/src/contexts/: ItemsContext.tsx  UserContext.tsx
web/src/lib/: config.ts  db.ts  items.ts  schema.ts  scoring.ts  sources.ts  utils.ts
web/web/: index.html
(+37 files in other folders)
